[package]
name = "rs-liquid-xoxno"
version = "0.0.0"
authors = ["mihai@xoxno.com"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.56.0"

[dev-dependencies]
num-bigint = "0.4.6"

[dependencies.multiversx-sc-modules]
version = "0.56.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.56.0"

[workspace]
members = [
    ".",
    "meta",
]
